Added font awesome

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,22 +1,23 @@
-
-
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
+
+// Font Awesome
+@import "~font-awesome/scss/font-awesome.scss";
 
 .navbar {
-  background-color: #0c64a2;
-  padding: 0.35rem 1rem;
+	background-color: #0c64a2;
+	padding: 0.35rem 1rem;
 }
 
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
 }
 
 .app-content {
-    flex: 1;
+	flex: 1;
 }
